k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pet-management
  labels:
    name: pet-management
    environment: production
